--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -19,4 +19,4 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "RushLensHome.py", "--server.port=8339", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "Home.py", "--server.port=8501", "--server.address=0.0.0.0"]
