--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,14 +10,18 @@ services:
       - WATCHPACK_POLLING=true
     ports:
       - 8501:8501
+    command: streamlit run /appcode/Home.py --server.port 8501 --server.address 0.0.0.0
+
 
   api:
     build: ./api
     container_name: web-api
     hostname: web-api
-    volumes: ["./api:/apicode"]
+    volumes: 
+      - ./api:/apicode
     environment:
       - WATCHPACK_POLLING=true
+      - PYTHONPATH=/apicode
     ports:
       - 4000:4000
 
